--- a/app/src/main/res/layout/fragment_blood_pressure.xml
+++ b/app/src/main/res/layout/fragment_blood_pressure.xml
@@ -43,6 +43,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -50,9 +51,11 @@
                     android:text="11/26/20"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
                 <TextView
+                    android:id="@+id/tv_time"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -60,7 +63,8 @@
                     android:text="09:31 AM"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
+
 
             </LinearLayout>
         </LinearLayout>
