--- a/app/src/main/res/layout/fragment_doctor_appointment.xml
+++ b/app/src/main/res/layout/fragment_doctor_appointment.xml
@@ -43,7 +43,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_header_doctor_appointment"
-                android:layout_margin="20dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="25dp"
                 android:drawableLeft="@drawable/ic_calender"
                 android:text="  Date and Time"
                 android:textColor="@color/colorText"
@@ -53,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_below="@id/tv_header_date_time_doctor_appointment"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/tv_date_doctor_appointment_fragment"
