--- a/app/src/main/res/layout/fragment_height.xml
+++ b/app/src/main/res/layout/fragment_height.xml
@@ -43,6 +43,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -50,9 +51,11 @@
                     android:text="11/26/20"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
                 <TextView
+                    android:id="@+id/tv_time"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -60,14 +63,14 @@
                     android:text="09:31 AM"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
 
             android:layout_below="@id/ll_header_height_fragment"
             android:orientation="vertical"
@@ -96,7 +99,7 @@
                     app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
                     app:boxStrokeColor="@color/black"
-
+                    android:id="@+id/tv_height"
                     app:boxStrokeWidth="2dp">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -106,6 +109,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                   android:id="@+id/til_units"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -145,14 +149,26 @@
                     app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
                     app:boxStrokeColor="@color/black"
-                    app:boxStrokeWidth="2dp">
+                    app:boxStrokeWidth="2dp"
+                    android:id="@+id/til_comment">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:gravity="center"/>
 
 
         </LinearLayout>
