--- a/app/src/main/res/layout/fragment_laboratory_test.xml
+++ b/app/src/main/res/layout/fragment_laboratory_test.xml
@@ -44,6 +44,7 @@
                 android:orientation="horizontal"
                 android:layout_below="@id/tv_card_header_1_datetime_lab_fragment">
                 <TextView
+                    android:id="@+id/tv_date_lab_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="11/26/20"
@@ -54,6 +55,7 @@
                     android:textColor="@color/colorPrimaryLight">
                 </TextView>
                 <TextView
+                    android:id="@+id/tv_time_lab_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="09:31 AM"
