--- a/app/src/main/res/layout/fragment_pulse.xml
+++ b/app/src/main/res/layout/fragment_pulse.xml
@@ -43,6 +43,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -50,9 +51,11 @@
                     android:text="11/26/20"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
                 <TextView
+                    android:id="@+id/tv_time"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -60,14 +63,14 @@
                     android:text="09:31 AM"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
 
             android:layout_below="@id/ll_header_pulse_fragment"
             android:orientation="vertical"
@@ -84,6 +87,7 @@
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_pulse"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -99,11 +103,13 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_units"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -133,6 +139,7 @@
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_comment"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -152,9 +159,18 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+
+                android:gravity="center"/>
 
         </LinearLayout>
-
 
     </RelativeLayout>
 
