--- a/app/src/main/res/layout/fragment_sugar_level.xml
+++ b/app/src/main/res/layout/fragment_sugar_level.xml
@@ -42,6 +42,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -49,9 +50,11 @@
                     android:text="11/26/20"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
 
                 <TextView
+                    android:id="@+id/tv_time"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="60dp"
@@ -59,7 +62,8 @@
                     android:text="09:31 AM"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryLight"
-                    android:textSize="15dp"></TextView>
+                    android:textSize="15dp"/>
+
 
             </LinearLayout>
         </LinearLayout>
@@ -84,6 +88,7 @@
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_field"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,6 +108,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_units"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -130,6 +136,8 @@
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
+
+                    android:id="@+id/til_comment"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -149,7 +157,16 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textAlignment="center"
+                android:layout_gravity="center"
 
+                android:gravity="center"/>
 
         </LinearLayout>
 
